// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot baseline — componentes do ofício do dia (web) > CollectSection — Oração de Coleta 1`] = `
<div>
  <div
    class="relative animate-scale-in group overflow-hidden"
  >
    <div
      class="classic-frame texture-parchment border-accent/20 shadow-lg !m-0"
    >
      <div
        class="relative z-10"
      >
        <div
          class="space-y-1.5 p-6 pb-6 flex flex-row items-start justify-between gap-4"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="p-3 bg-dourado/10 rounded-2xl shadow-sm text-vinho dark:text-[hsl(336,28%,78%)] group-hover:scale-110 transition-transform duration-500"
            >
              <svg
                class="lucide lucide-crown w-8 h-8"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.562 3.266a.5.5 0 0 1 .876 0L15.39 8.87a1 1 0 0 0 1.516.294L21.183 5.5a.5.5 0 0 1 .798.519l-2.834 10.246a1 1 0 0 1-.956.734H5.81a1 1 0 0 1-.957-.734L2.02 6.02a.5.5 0 0 1 .798-.519l4.276 3.664a1 1 0 0 0 1.516-.294z"
                />
                <path
                  d="M5 21h14"
                />
              </svg>
            </div>
            <div
              class="space-y-1"
            >
              <h3
                class="font-semibold tracking-tight text-xl md:text-2xl font-display text-secondary italic"
              >
                Oração de Coleta
              </h3>
              <p
                class="flex items-center gap-1.5 text-[9px] md:text-[10px] uppercase tracking-[0.2em] font-bold text-muted-foreground"
              >
                Oração Tradicional da Liturgia
                <button
                  aria-label="O que significa Oração de Coleta?"
                  class="text-muted-foreground/70 transition-colors hover:text-accent"
                  type="button"
                >
                  <svg
                    class="lucide lucide-circle-help h-3.5 w-3.5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <path
                      d="M12 17h.01"
                    />
                  </svg>
                </button>
              </p>
            </div>
          </div>
          <button
            aria-label="Copiar Oração de Coleta"
            class="p-2 rounded-md text-muted-foreground hover:text-accent hover:bg-accent/10 transition-colors"
            title="Copiar Oração de Coleta"
            type="button"
          >
            <svg
              class="lucide lucide-copy w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </button>
        </div>
        <div
          class="space-y-8"
        >
          <div
            class="bg-card/30 rounded-none p-8 border-l-4 border-accent/20"
          >
            <p
              class="text-base md:text-lg lg:text-xl leading-relaxed font-scripture text-foreground/90 italic"
            >
              Deus misericordioso, que enviaste os teus mensageiros, os profetas, para pregar o arrependimento.
            </p>
            <div
              class="mt-8 pt-6 border-t border-accent/10"
            >
              <p
                class="text-right text-[10px] uppercase tracking-[0.3em] font-bold text-accent/60 italic"
              >
                Por Jesus Cristo, nosso Senhor. Amém.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="classic-frame-footer"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot baseline — componentes do ofício do dia (web) > PrayerSection — Oração do Dia 1`] = `
<div>
  <div
    class="relative animate-fade-in group"
  >
    <div
      class="classic-frame bg-vinho border-dourado shadow-2xl texture-leather"
    >
      <div
        class="relative z-10 border-b border-dourado/20 pb-10"
      >
        <div
          class="flex items-center justify-center gap-6 mb-4"
        >
          <div
            class="w-12 h-px bg-gradient-to-r from-transparent to-dourado/40"
          />
          <div
            class="p-4 bg-laranja-queimado rounded-full shadow-liturgical group-hover:scale-110 transition-transform duration-1000"
          >
            <svg
              class="lucide lucide-flame w-8 h-8 text-bege-areia"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
              />
            </svg>
          </div>
          <div
            class="w-12 h-px bg-gradient-to-l from-transparent to-dourado/40"
          />
        </div>
        <div
          class="text-center space-y-2"
        >
          <div
            class="flex items-center justify-center gap-2"
          >
            <h2
              class="text-2xl md:text-4xl font-display text-bege-areia tracking-tight"
            >
              Oração do Dia
            </h2>
            <button
              aria-label="O que significa Oração do Dia?"
              class="text-muted-foreground/70 transition-colors hover:text-accent"
              type="button"
            >
              <svg
                class="lucide lucide-circle-help h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </button>
          </div>
          <p
            class="text-[10px] md:text-xs uppercase tracking-[0.3em] md:tracking-[0.4em] font-bold text-dourado-texto"
          >
            Oração do Segundo Domingo do Advento
          </p>
        </div>
      </div>
      <div
        class="space-y-8 md:space-y-12 pt-8 md:pt-12 relative z-10"
      >
        <div
          class="max-w-4xl mx-auto"
        >
          <blockquote
            class="text-base md:text-lg lg:text-xl leading-relaxed font-scripture text-bege-areia italic text-center px-3 md:px-4 lg:px-16 drop-shadow-sm"
          >
            Deus Todo-Poderoso, concede que possamos lançar fora as obras das trevas e nos revestir da armadura da luz.
          </blockquote>
          <div
            class="flex items-center justify-center gap-4 mt-12 text-[10px] font-bold uppercase tracking-[0.3em] text-dourado-texto"
          >
            <span
              class="w-10 h-px bg-dourado/20"
            />
            <span>
              Livro de Oração Comum
               • 
              Tradição Anglicana
            </span>
            <span
              class="w-10 h-px bg-dourado/20"
            />
          </div>
        </div>
        <div
          class="pt-10 text-center border-t border-dourado/10 space-y-4"
        >
          <p
            class="text-[10px] uppercase tracking-[0.5em] text-dourado-texto font-bold"
          >
            "SURSUM CORDA — CORAÇÕES AO ALTO"
          </p>
          <div
            class="flex justify-end pt-2"
          >
            <button
              aria-label="Copiar oração"
              class="p-2 rounded-md text-dourado-texto border border-dourado/20 hover:bg-dourado/10 transition-colors"
              title="Copiar oração"
            >
              <svg
                class="lucide lucide-copy w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="classic-frame-footer"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot baseline — componentes do ofício do dia (web) > ReadingCard — Evangelho (card de leitura comum) 1`] = `
<div>
  <div
    class="group relative animate-fade-in"
    style="animation-delay: 150ms;"
  >
    <div
      class="classic-frame texture-parchment shadow-xl hover:shadow-2xl transition-all duration-500 hover:-translate-y-1 !m-0 overflow-hidden"
    >
      <div
        class="absolute top-0 left-0 w-full h-1 bg-liturgical-primary opacity-60 transition-colors duration-700 ease-liturgico"
      />
      <div
        class="relative z-10"
      >
        <div
          class="flex items-start justify-between gap-4 mb-6"
        >
          <div
            class="flex-1"
          >
            <h3
              class="text-xl md:text-2xl font-display text-secondary group-hover:text-primary transition-colors italic"
            >
              Marcos 1:1-8
            </h3>
            <p
              class="text-[10px] uppercase tracking-[0.2em] font-bold text-muted-foreground mt-1"
            >
              Marcos 1:1-8
            </p>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-xs font-semibold focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-accent/10 text-accent border border-accent/20 hover:bg-accent/15 hover:border-accent/30 transition-colors shadow-none px-3 py-1 rounded-none flex items-center gap-2"
            >
              <svg
                class="lucide lucide-cross w-3 h-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 9a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h4a1 1 0 0 1 1 1v4a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2v-4a1 1 0 0 1 1-1h4a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2h-4a1 1 0 0 1-1-1V4a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2v4a1 1 0 0 1-1 1z"
                />
              </svg>
              <span
                class="text-[9px] uppercase tracking-[0.2em] font-bold"
              >
                Evangelho
              </span>
            </div>
          </div>
        </div>
        <div
          class="relative py-3 md:py-4"
        >
          <div
            class="absolute top-0 left-0 w-8 h-px bg-accent/30"
          />
          <p
            class="text-sm md:text-base lg:text-lg leading-relaxed font-scripture text-foreground/90 pl-3 md:pl-4 border-l-2 border-accent/20"
          >
            Princípio do evangelho de Jesus Cristo, Filho de Deus. Como está escrito nos profetas: Eis que eu envio o meu anjo ante a tua face.
          </p>
          <div
            class="flex justify-end pt-2"
          >
            <button
              aria-label="Copiar leitura"
              class="p-2 rounded-md text-muted-foreground hover:text-accent hover:bg-accent/10 transition-colors"
            >
              <svg
                class="lucide lucide-copy w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="classic-frame-footer"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot baseline — componentes do ofício do dia (web) > ReadingCard — Salmo Responsorial com ornamento de resposta 1`] = `
<div>
  <div
    class="group relative animate-fade-in"
    style="animation-delay: 0ms;"
  >
    <div
      class="classic-frame texture-parchment shadow-xl hover:shadow-2xl transition-all duration-500 hover:-translate-y-1 !m-0 overflow-hidden"
    >
      <div
        class="absolute top-0 left-0 w-full h-1 bg-liturgical-primary opacity-60 transition-colors duration-700 ease-liturgico"
      />
      <div
        class="relative z-10"
      >
        <div
          class="flex items-start justify-between gap-4 mb-6"
        >
          <div
            class="flex-1"
          >
            <h3
              class="text-xl md:text-2xl font-display text-secondary group-hover:text-primary transition-colors italic"
            >
              Salmo 85:1-2, 8-13
            </h3>
            <p
              class="text-[10px] uppercase tracking-[0.2em] font-bold text-muted-foreground mt-1"
            >
              Salmo 85
            </p>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <div
              class="text-xs font-semibold focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-accent/10 text-accent border border-accent/20 hover:bg-accent/15 hover:border-accent/30 transition-colors shadow-none px-3 py-1 rounded-none flex items-center gap-2"
            >
              <svg
                class="lucide lucide-music w-3 h-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 18V5l12-2v13"
                />
                <circle
                  cx="6"
                  cy="18"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="16"
                  r="3"
                />
              </svg>
              <span
                class="text-[9px] uppercase tracking-[0.2em] font-bold"
              >
                Salmo Responsorial
              </span>
            </div>
          </div>
        </div>
        <div
          class="relative py-3 md:py-4"
        >
          <div
            class="absolute top-0 left-0 w-8 h-px bg-accent/30"
          />
          <div
            aria-hidden="true"
            class="flex items-center justify-center gap-3 mb-4"
          >
            <span
              class="w-16 h-px bg-accent/30"
            />
            <svg
              class="lucide lucide-music w-4 h-4 text-accent/70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18V5l12-2v13"
              />
              <circle
                cx="6"
                cy="18"
                r="3"
              />
              <circle
                cx="18"
                cy="16"
                r="3"
              />
            </svg>
            <span
              class="w-16 h-px bg-accent/30"
            />
          </div>
          <p
            class="text-sm md:text-base lg:text-lg leading-relaxed font-scripture text-foreground/90 pl-3 md:pl-4 border-l-2 border-accent/20"
          >
            Senhor, foste propício à tua terra; fizeste voltar o cativeiro de Jacó. Perdoaste a iniquidade do teu povo; cobriste todos os seus pecados.
          </p>
          <div
            class="flex justify-end pt-2"
          >
            <button
              aria-label="Copiar leitura"
              class="p-2 rounded-md text-muted-foreground hover:text-accent hover:bg-accent/10 transition-colors"
            >
              <svg
                class="lucide lucide-copy w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="classic-frame-footer"
      />
    </div>
  </div>
</div>
`;
